# RecAlgo

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/models/rank/: dcnv2_amazon.yaml  dien_amazon.yaml  din_amazon.yaml
configs/models/recall/: bpr.yaml  lightgcn.yaml  lightgcn_gowalla.yaml  ngcf_gowalla.yaml
custom_models/: __init__.py
custom_models/rank/: __init__.py  template.py
custom_models/recall/: __init__.py  bpr.py  lightgcn.py  template.py
docs/: DeepSeek_Technical_Report.md  GLM-4_Technical_Report.md  Qwen_Technical_Report.md  ctr_datasets_report.md  ctr_reproduction_plan.md  ctr_sequential_datasets_report.md  research_report.md
experiments/results/: BPR_reproduction_report.md  LightGCN_reproduction_report.md
scripts/: _compare_lightgcn_official.py  download_data.py  prepare_gowalla.py  run_baseline.py  run_comparison.py  run_custom.py
